# test-ghactions

./: .release-please-manifest.json  CHANGELOG.md  Makefile  hi.py  pyproject.toml  release-please-config.json
.github/workflows/: commit_sha.yml  last_tag.yml  release-please.yml  release.yaml  tag.yml  terraform.yaml  trigger.yml  variaveis.yaml
